fix misaligned images in bookmark cards

--- a/packages/gatsby-rehype-inline-images/src/gatsby-theme-try-ghost/styles/fluid.css
+++ b/packages/gatsby-rehype-inline-images/src/gatsby-theme-try-ghost/styles/fluid.css
@@ -3,8 +3,7 @@
 /* Fluid inline images
 /* ---------------------------------------------------------- */
 
-html.casper .post-content {
-    display: block;
+html.casper .post-content figure {
     min-width: 100%;
 }
 
